<resources>
    <string name="app_name">WA direct</string>
    <string name="text">WA Direct Chat</string>
    <string name="recent_messages">RECENT Messages</string>
    <string name="country_names">PK</string>
    <string name="country_code">+92</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="number">923035440887</string>
    <string name="no_history">No History</string>
    <string name="get_started">Get Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_text1">Send Messages to Any Number</string>
    <string name="home_text2">Without Saving Number</string>
    <string name="select_country">Select Country Code and Enter Number</string>
    <string name="message">Message:</string>
    <string name="clear">Clear</string>
    <string name="direct_chat">Direct Chat</string>
    <string name="wa_direct">WA Direct</string>
    <string name="rate">Rate app</string>
    <string name="rate1">Rate</string>
    <string name="share">Share</string>
    <string name="other_apps">Other Apps</string>
    <string name="exit">Exit</string>
    <string name="num">+923000000000</string>
    <string name="date_time">19 Apr 2022 10:30 AM</string>
    <string name="rating_text">Would you like to rate us?</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>