<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeFragment"
    android:layout_alignParentBottom="true"
    android:fitsSystemWindows="true">


    <TextView
        android:id="@+id/home_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/alegreya_sans"
        android:text="@string/home_text1"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:fontFamily="@font/alegreya_sans"
        android:text="@string/home_text2"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_text1"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_text1"
        app:strokeColor="@color/splash_color"
        app:strokeWidth="@dimen/_1sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp">

            <TextView
                android:id="@+id/direct_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/alegreya_sans"
                android:text="@string/direct_chat"
                android:textColor="@color/splash_color"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/select_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/alegreya_sans"
                android:text="@string/select_country"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/direct_chat" />

            <LinearLayout
                android:id="@+id/linear_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/select_country">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:strokeColor="@color/splash_color"
                    app:strokeWidth="@dimen/_1sdp">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/numberCodePicker"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:ccpDialog_background="@color/white"
                        app:ccpDialog_backgroundColor="@color/white"
                        app:ccp_showNameCode="false"
                        app:ccp_showPhoneCode="true" />
                </com.google.android.material.card.MaterialCardView>

                <EditText
                    android:id="@+id/numbers"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1.35"
                    android:textAlignment="center"
                    android:background="@drawable/text_bg"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/alegreya_sans"
                    android:hint="@string/enter_number"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textSize="@dimen/_16sdp" />

            </LinearLayout>


            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/alegreya_sans"
                android:text="@string/message"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout1" />


            <EditText
                android:id="@+id/enter_messages"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/text_bg"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/alegreya_sans"
                android:gravity="top"
                android:hint="@string/enter_message"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message" />


            <Button
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/alegreya_sans"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textSize="@dimen/_16sdp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/clear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_messages" />

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="52dp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/alegreya_sans"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textSize="@dimen/_16sdp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_messages"
                app:layout_constraintVertical_bias="0.538" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>